--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,3 @@
-scikit-learn==1.3
-pandas==2.0.3
-joblib==1.3.1
-seaborn==0.12.2
-plotly==5.15.0
-numpy==1.25.2
 matplotlib==3.7.2
 isort==5.12.0
 autopep8
@@ -34,3 +28,9 @@ starlette==0.27.0
 threadpoolctl==3.2.0
 typing_extensions==4.7.1
 uvicorn==0.23.2
+scikit-learn
+pandas
+joblib
+seaborn
+plotly
+numpy
