--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,14 +8,14 @@ repos:
       types_or: [ python, pyi, jupyter ]  
 
 - repo: https://github.com/pre-commit/mirrors-autopep8
-  rev: ''
+  rev: 'v2.0.2'
   hooks:
       - id: autopep8
         exclude: '^$'  # Specify files or patterns to exclude, '^$' excludes nothing (all files will be checked)
         types: [ python, pyi, jupyter ]
 
 - repo: https://github.com/PyCQA/flake8
-  rev: 6.0.0
+  rev: 6.1.0
   hooks:
   - id: flake8
 #    args: [--ignore=E501]
@@ -38,7 +38,7 @@ repos:
       
 # Black
 - repo: https://github.com/psf/black
-  rev: 23.1.0
+  rev: 23.7.0
   hooks:
     - id: black
       types_or: [ python, pyi, jupyter ]
